# novel-translator

./: .clinerules  .env.example  .gitignore  AGENTS.md  README.md  README_ES.md  check_status.py  clean.sh  create_shortcut.ps1  install.bat  install.sh  install_test.sh  main.py  pyproject.toml  requirements.txt  run_nt.bat  run_nt.sh  run_nt.vbs  run_nv.sh  test_refine_alt.py
.claude/reviews/: local-review-2026-07-01.md
.github/workflows/: build.yml
.kilocode/rules/: python.md
pyqt6-version/: README.md  README_ES.md  create_shortcut.ps1  install.sh  main.py  pyproject.toml  run_nt.sh
pyqt6-version/docs/CODEMAPS/: INDEX.md  backend.md  database.md  frontend.md  integrations.md  workers.md
pyqt6-version/src/config/: config.json  (+3 more)
server/: AGENTS.md  Makefile  README.md
server/frontend/: package-lock.json  package.json
src/config/: config.json  languages.json  markdown_rules.json  preset_terms.json  recents.json  translation_models.json
src/gui/: check_refine_settings_gui.py  clean.py  create.py  epub_preview.py  log_window.py  notes_dialog.py  prompt_refine_settings.py  refine.py  settings_gui.py  translate.py
src/logic/: cleaner.py  creator.py  custom_terms.json  database.py  epub_converter.py  epub_generator.py  epub_importer.py  epub_text_processor.py  folder_structure.py  functions.py  get_path.py  language_manager.py  loader.py  prompt_base.txt  prompt_check.txt  refine_manager.py  session_logger.py  status_manager.py  translation_manager.py  translation_models.json  translator.py  translator_req.py  xml_utils.py
src/resources/: preset_terms.json
(+75 files in other folders)
