[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-translator"
version = "1.0.0"
description = "A comprehensive desktop application for managing, processing, and translating novels and text documents"
authors = [
    {name = "mfloresz"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "pypub3>=2.0.8",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "ebooklib>=0.18",
    "mistune>=3.0.0"
]

[project.scripts]
novel-translator = "main:main"

[project.gui-scripts]
novel-translator-gui = "main:main"